# course_4

./: README.md  main.py  pyproject.toml
src/: api_basis.py  hh_api.py  json_saver.py  selected_vacancies.json  sj_api.py  vacancies.py
utils/: user.py
